# fall-2024-class-03

./: .gitignore  README.md  pyproject.toml
.devcontainer/: configure_environment.sh
basic_packages_introduction/: 01_numpy.ipynb  02_pandas.ipynb  03_pandas_plots.ipynb  04_matplotlib_plots.ipynb  05_matplotlib_widgets.ipynb
basic_packages_introduction/data/: nj_counties.csv
ml_packages_introduction/: 01_intro_to_scikit_regression.ipynb  02_intro_to_scikit_classification.ipynb  03_clustering_with_scikit.ipynb  04_pytorch_introduction.ipynb  05_pytorch_autoencoder_example.ipynb  data_generators.py  data_visualizers.py  ml_data_tools.py
ml_packages_introduction/datasets/metal_bands/: metal_bands_2017.csv
notebooks/python_introduction/: 00_python.ipynb  01_lists.ipynb  02_forloops.ipynb  04_dictionary.ipynb
presentations/: index.html  package-lock.json  package.json
python_examples/: examples.py
python_introduction/: 03_lambdas.ipynb  05_classes.ipynb
software_tips/: 00_software_hygiene.ipynb  character_generator.py
